@@ -182,13 +182,15 @@ class Table(object):
 
         ``md`` should be of the form ``{observation_id:{dict_of_metadata}}``
         """
-        if self.ObservationMetadata != None:
+        if self.ObservationMetadata is not None:
             for id_, md_entry in md.items():
                 if self.observationExists(id_):
-                    self.ObservationMetadata[self.getObservationIndex(id_)].update(md_entry)
+                    self.ObservationMetadata[
+                            self.getObservationIndex(id_)].update(md_entry)
         else:
             super(Table, self).__setattr__('ObservationMetadata',
-                    tuple([md[id_] for id_ in self.ObservationIds]))
+                  tuple([md[id_] if id_ in md else None
+                         for id_ in self.ObservationIds]))
         self._cast_metadata()
 
     def addSampleMetadata(self, md):
@@ -196,13 +198,15 @@ class Table(object):
     
         ``md`` should be of the form ``{sample_id:{dict_of_metadata}}``
         """
-        if self.SampleMetadata != None:
+        if self.SampleMetadata is not None:
             for id_, md_entry in md.items():
                 if self.sampleExists(id_):
-                    self.SampleMetadata[self.getSampleIndex(id_)].update(md_entry)
+                    self.SampleMetadata[
+                            self.getSampleIndex(id_)].update(md_entry)
         else:
             super(Table, self).__setattr__('SampleMetadata',
-                    tuple([md[id_] for id_ in self.SampleIds]))
+                  tuple([md[id_] if id_ in md else None
+                         for id_ in self.SampleIds]))
         self._cast_metadata()
 
     def __getitem__(self, args):
